# ai_project_animal_shelter

./: LICENSE  README.md
animalshelter/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
animalshelter/conf/base/: catalog.yml  parameters_preprocessing.yml
animalshelter/data/model_input/: test.csv  val.csv
animalshelter/data/processed/: processed_animal_data.csv
animalshelter/data/raw/: Austin_Animal_Center_Outcomes_20251105.csv.bak
animalshelter/notebooks/: EDA_animal_shelter.ipynb  kedro_jupyter_troubleshooting.ipynb
animalshelter/src/: __init__.py
animalshelter/src/animalshelter/: __init__.py  __main__.py  pipeline_registry.py  settings.py
animalshelter/src/animalshelter/pipelines/eda/: nodes.py  pipeline.py
animalshelter/src/animalshelter/pipelines/preprocessing/: nodes.py  pipeline.py
animalshelter/tests/: conftest.py
animalshelter/tests/pipelines/preprocessing/: test_nodes.py  test_pipeline.py
